@@ -1,43 +1,0 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package org.apache.solr.client.solrj.impl;
-
-import org.apache.http.client.HttpClient;
-import org.apache.solr.client.solrj.ResponseParser;
-
-import java.net.MalformedURLException;
-
-/**
- * @deprecated Use {@link org.apache.solr.client.solrj.impl.LBHttpSolrClient}
- */
-@Deprecated
-public class LBHttpSolrServer extends LBHttpSolrClient {
-
-  public LBHttpSolrServer(String... solrServerUrls) throws MalformedURLException {
-    super(solrServerUrls);
-  }
-
-  public LBHttpSolrServer(HttpClient httpClient, String... solrServerUrl) {
-    super(httpClient, solrServerUrl);
-  }
-
-  public LBHttpSolrServer(HttpClient httpClient, ResponseParser parser, String... solrServerUrl) {
-    super(httpClient, parser, solrServerUrl);
-  }
-
-}
